--- a/HexProject/HexProject.csproj
+++ b/HexProject/HexProject.csproj
@@ -235,7 +235,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\GameFieldManager.cs" />
     <Compile Include="Assets\GridGenerator.cs" />
+    <Compile Include="Assets\HexProperties.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
